--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="./assets/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <script src="./app.js"></script>
